# IggyParser

./: .gitignore  CHARASELE_XV1.iggy  CMakeLists.txt  IggyParser  build.bat  build_linux.sh  iggy.h  main.c
